--- a/arcade-react/src/App.css
+++ b/arcade-react/src/App.css
@@ -1,3 +1,14 @@
 .App {
   height: 100vh;
 }
+
+body {
+  display: block;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1498736297812-3a08021f206f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2271&q=80);
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  font-family: 'Henny Penny', cursive;
+}
