--- a/arcade-react/src/App.css
+++ b/arcade-react/src/App.css
@@ -12,3 +12,5 @@ body {
   background-repeat: no-repeat;
   font-family: 'Henny Penny', cursive;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap');
