--- a/arcade-react/src/index.css
+++ b/arcade-react/src/index.css
@@ -28,3 +28,16 @@
   font-size: 36px;
   margin-left: 50px;
 }
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: grey;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: whitesmoke;
+}
