--- a/arcade-react/src/index.css
+++ b/arcade-react/src/index.css
@@ -41,3 +41,15 @@
 .sidenav a:hover {
   color: whitesmoke;
 }
+
+.sidenav {
+  background-color: black;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
