--- a/arcade-react/src/index.css
+++ b/arcade-react/src/index.css
@@ -53,3 +53,10 @@
   padding-top: 60px;
   transition: 0.5s;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+}
